# safer-streets-apps

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  README.md  build-images.sh  pyproject.toml
src/safer_streets_apps/: demo.py
src/safer_streets_apps/agent/: chunking.py  embeddings.py  split-pdf.py
src/safer_streets_apps/fastapi/: app.py  auth.py  impl.py  models.py  sql.py  startup.py
src/safer_streets_apps/streamlit/: Main.py  Test.py  common.py
src/safer_streets_apps/streamlit/pages/: Capture.py  Consistency.py  Demographics.py  Hotspots.py  Interventions.py  Metrics.py  More.py  Overview.py  Test.py  Tradeoff.py
src/safer_streets_apps/streamlit/pages/Legacy/: Capture.py  Consistency.py  Demographics.py
