[project]
name = "safer-streets-apps"
version = "0.1.0"
authors = [
    { name = "virgesmith", email = "a.p.smith@leeds.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "safer-streets-core",
    "streamlit>=1.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
safer-streets-core = { git = "https://github.com/safer-streets/safer-streets-core" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/test/*.py" = ["D103"]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
